--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Memento = "f28f55f0-a522-5efc-85c2-fe41dfb9b2d9"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 PowerModelsMCDC = "05d58fe5-e6ff-58ad-86d6-05dcc0b74504"
+XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
 CbaOPF = "0.2.6"
