--- a/Project.toml
+++ b/Project.toml
@@ -7,11 +7,12 @@ version = "1.0.0-DEV"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CbaOPF = "b09c5755-86bc-4b69-9fb0-eea9d409a5ca"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
-JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FlexPlan = "4dc3fedf-fcb4-4327-bce2-523fd266e8c9"
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 InfrastructureModels = "2030c09a-7f63-5d83-885d-db604e0e9cc0"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Memento = "f28f55f0-a522-5efc-85c2-fe41dfb9b2d9"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
